Stop links overflowing, tweak brexit text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@
  * Box sizing
  */
  * {
-     box-sizing: border-box;
+  box-sizing: border-box;
  }
 
 
@@ -13,8 +13,8 @@
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -23,16 +23,16 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-    color: $dark-color;
-    background-color: $light-color;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-feature-settings: "kern" 1;
-    -moz-font-feature-settings: "kern" 1;
-    -o-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern" 1;
-    font-kerning: normal;
-    -webkit-font-smoothing: antialiased;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  color: $dark-color;
+  background-color: $light-color;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-feature-settings: "kern" 1;
+  -moz-font-feature-settings: "kern" 1;
+  -o-font-feature-settings: "kern" 1;
+  font-feature-settings: "kern" 1;
+  font-kerning: normal;
+  -webkit-font-smoothing: antialiased;
 }
 
 
@@ -44,48 +44,48 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit / 2;
 }
 
 /**
  * Images
  */
 img {
-    max-width: 100%;
-    vertical-align: middle;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 /**
  * Figures
  */
 figure > img {
-    display: block;
+  display: block;
 }
 
 figcaption {
-    font-size: $small-font-size;
+  font-size: $small-font-size;
 }
 
 /**
  * Lists
  */
 ul, ol {
-    margin: 4rem 2rem;
-    list-style: outside;
+  margin: 4rem 2rem;
+  list-style: outside;
 }
 
 li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
+  > ul,
+  > ol {
+    margin-bottom: 0;
+  }
 }
 
 /**
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+  font-weight: $base-font-weight;
 }
 
 /**
@@ -93,41 +93,43 @@ h1, h2, h3, h4, h5, h6 {
  */
 pre,
 code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+  font-size: 15px;
+  border: 1px solid $grey-color-light;
+  border-radius: 3px;
+  background-color: #eef;
 }
 
 code {
-    padding: 1px 5px;
+  padding: 1px 5px;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: auto;
+  padding: 8px 12px;
+  overflow-x: auto;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 /**
  * Default Paragraph styling
  */
 p {
-    margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 }
 
  a {
-     color: $highlight-color;
-     box-sizing: border-box;
-     border-bottom: 3px solid $light-color;
-     transition: .75s all;
+  color: $highlight-color;
+  box-sizing: border-box;
+  border-bottom: 3px solid $light-color;
+  transition: .75s all;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
-     &:hover {
-         border-bottom: 3px solid $highlight-color;
-     }
- }
+  &:hover {
+    border-bottom: 3px solid $highlight-color;
+  }
+}
