--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,3 +2,8 @@
   max-width: $content-width;
   margin: auto;
 }
+
+.twitter-tweet {
+  margin-bottom: 2rem!important;
+  width: 100%!important;
+}
